--- a/.github/workflows/Generate Snake.yml
+++ b/.github/workflows/Generate Snake.yml
@@ -17,11 +17,11 @@ jobs:
       
       - name: generate-snake-game-from-github-contribution-grid
         uses: Platane/snk@v2.2.0
-        id: snake-gif
         with:
           github_user_name: ${{ github.repository_owner }}
-          gif_out_path: ./contribution-snake/github-contribution-grid-snake.gif
-          svg_out_path: ./contribution-snake/github-contribution-grid-snake.svg
+          outputs: |
+            ./dist/contribution-snake/github-contribution-grid-snake.gif
+            ./contribution-snake/github-contribution-grid-snake.svg
 
       - name: Push to GitHub
         uses: EndBug/add-and-commit@v7.2.1
